# ash

./: .ash_history  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SUMMARY.md  TOOLS.md
crates/ash-bench/: Cargo.toml  README.md
crates/ash-bench/benches/: core.rs  effect_lattice.rs  interp.rs  interpreter.rs  parser.rs
crates/ash-cli/: Cargo.toml
crates/ash-cli/src/: error.rs  lib.rs  main.rs  value_convert.rs
crates/ash-cli/src/commands/: check.rs  dot.rs  mod.rs  repl.rs  run.rs  trace.rs
crates/ash-cli/src/output/: json.rs  mod.rs
crates/ash-cli/tests/: check_json_output_test.rs  cli.rs  cli_input_workflow_test.rs  cli_spec_compliance_test.rs  input_functional_test.rs  json_output_schema_test.rs  repl_command.rs  run_output.rs  trace_output.rs
crates/ash-core/: Cargo.toml
crates/ash-core/proptest-regressions/: proptest_helpers.txt  value.txt
crates/ash-core/src/: adt.rs  ast.rs  effect.rs  lib.rs  module_graph.rs  proptest_helpers.rs  provenance.rs  stream.rs  test_helpers.rs  value.rs  visualize.rs  workflow_contract.rs
crates/ash-core/src/capabilities/: agent_harness.rs  mod.rs
crates/ash-core/tests/: agent_harness_tests.rs  proxy_ast_tests.rs
crates/ash-doc-tests/: Cargo.toml
crates/ash-doc-tests/src/: main.rs
crates/ash-engine/: Cargo.toml
crates/ash-engine/src/: check.rs  entry.rs  error.rs  execute.rs  harness.rs  lib.rs  parse.rs  providers.rs
crates/ash-engine/src/providers/: mcp.rs  mod.rs
crates/ash-engine/tests/: e2e_capability_provider_tests.rs  entry_verification.rs  harness_tests.rs  mcp_provider_tests.rs  provider_wiring_test.rs  role_runtime_integration_tests.rs  runtime_boundary_visibility.rs  workflow_contracts_integration.rs  workflow_contracts_proptest.proptest-regressions  workflow_contracts_proptest.rs
crates/ash-fuzz/: Cargo.toml  README.md
crates/ash-fuzz/fuzz_targets/: fuzz_effect_lattice.rs  fuzz_value_roundtrip.rs  parse.rs  typeck.rs
crates/ash-interp/: Cargo.toml
crates/ash-interp/src/: behaviour.rs  capability.rs  capability_policy.rs  capability_policy_runtime.rs  capability_provenance.rs  constraint_enforcement.rs  context.rs  control_link.rs  error.rs  eval.rs  exec_send.rs  execute.rs  execute_observe.rs  execute_set.rs  execute_stream.rs  guard.rs  lib.rs  mailbox.rs  pattern.rs  policy.rs  proxy_registry.rs  role_context.rs  role_runtime.rs  runtime_outcome_state.rs  runtime_state.rs  stream.rs  typed_provider.rs  yield_routing.rs  yield_state.rs
crates/ash-interp/tests/: adt_contracts.rs  constraint_enforcement_tests.rs  obligation_execution_tests.rs  policy_runtime_outcomes.rs  proxy_execution_tests.rs  receive_execution.rs  role_runtime_props.proptest-regressions  role_runtime_props.rs  role_runtime_tests.rs  runtime_action_control.rs  runtime_boundary_visibility.rs  runtime_outcome_state.rs  yield_execution_tests.rs  yield_routing_tests.rs
crates/ash-lint/: Cargo.toml  README.md
crates/ash-lint/src/: main.rs
crates/ash-parser/: Cargo.toml
crates/ash-parser/src/: combinators.rs  desugar.rs  error.rs  error_recovery.rs  import_resolver.rs  input.rs  lexer.rs  lib.rs  lower.rs  module.rs  parse_crate_root.rs  parse_expr.rs  parse_module.rs  parse_observe.rs  parse_pattern.rs  parse_policy.rs  parse_receive.rs  parse_send.rs  parse_set.rs  parse_type_def.rs  parse_use.rs  parse_utils.rs  parse_visibility.rs  parse_workflow.rs  resolver.rs  surface.rs  token.rs  use_tree.rs
crates/ash-parser/tests/: capability_constraint_tests.rs  capability_parser_props.proptest-regressions  capability_parser_props.rs  contract_parsing.rs  crate_root_parser.rs  implicit_role_tests.rs  lexer_props.proptest-regressions  lexer_props.rs  multi_crate_resolver.rs  multi_crate_visibility.rs  plays_role_tests.rs  policy_lowering.rs  proxy_parser_tests.rs  receive_lowering.rs  receive_parser.rs  stdlib_parsing.rs  stdlib_surface.rs  visibility_integration_test.rs  workflow_contracts.rs  yield_lowering_tests.rs
crates/ash-provenance/: Cargo.toml
crates/ash-provenance/src/: audit.rs  export.rs  integrity.rs  lib.rs  lineage.rs  trace.rs
crates/ash-provenance/tests/: runtime_trace_boundaries.rs
crates/ash-repl/: Cargo.toml
crates/ash-repl/src/: ast.rs  completer.rs  error.rs  input.rs  lib.rs  main.rs  session.rs
crates/ash-repl/tests/: ast_display.rs  multiline_error_test.rs  repl_commands.rs  repl_type_reporting.rs  standalone_binary.rs  workflow_storage_test.rs
crates/ash-typeck/: Cargo.toml
crates/ash-typeck/proptest-regressions/: types.txt
crates/ash-typeck/src/: capability_check.rs  capability_typecheck.rs  check_expr.rs  check_pattern.rs  constraint_checking.rs  constraints.rs  effect.rs  effective_caps.rs  error.rs  exhaustiveness.rs  instantiate.rs  kind.rs  lib.rs  name_binding.rs  names.rs  obligation_checker.rs  obligations.rs  policy_check.rs  qualified_name.rs  requirements.rs  role_checking.rs  runtime_verification.rs  smt.rs  smt_fallback.rs  solver.rs  type_env.rs  types.rs  visibility.rs
crates/ash-typeck/tests/: adt_contracts.rs  adt_qualified_names_test.rs  constraint_type_tests.rs  effective_caps_tests.rs  expression_typing_edge_cases.rs  expression_typing_soundness_test.rs  obligation_checking_test.rs  obligation_tracking_test.rs  policy_contracts.rs  policy_runtime_outcomes.rs  receive_contracts.rs  role_type_tests.rs  runtime_args_contracts.rs  runtime_error_contracts.rs  runtime_verification_contracts.rs  runtime_verification_input_contracts.rs  visibility_test.rs
docs/: API.md  OPTIMIZATIONS.md  README.md  SHARO_CORE_LANGUAGE.md  TUTORIAL.md
examples/: README.md  (+5 more)
tools/agent-pipeline/: PLAN.md  README.md  VILA-INTEGRATION.md  agent-pipeline.service  install.sh  pyproject.toml  vila-integration.sh
tools/agent-pipeline/src/: ash_pipeline.py
tools/agent-pipeline/src/agent_pipeline/: __init__.py  agents.py  cli.py  events.py  prompt_contracts.py  state.py  supervisor.py  worktrees.py
tools/agent-pipeline/tests/: test_agents.py  test_cli.py  test_events.py  test_packaging.py  test_state.py  test_supervisor.py  test_worktrees.py
(+678 files in other folders)
