[workspace]
members = [
    "crates/ash-core",
    "crates/ash-parser",
    "crates/ash-typeck",
    "crates/ash-interp",
    "crates/ash-provenance",
    "crates/ash-cli",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["Sharo Contributors"]
repository = "https://github.com/dikini/ash"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
winnow = "0.5"
pretty_assertions = "1.4"
