[workspace]
members = [
    "crates/ash-core",
    "crates/ash-parser",
    "crates/ash-typeck",
    "crates/ash-interp",
    "crates/ash-provenance",
    "crates/ash-macros",
    "crates/ash-doc-tests",
]
# ash-fuzz excluded - requires nightly toolchain for fuzzing
# Excluded from main workspace:
# - ash-fuzz: requires nightly toolchain for libfuzzer
# - ash-bench: not part of main build, run separately via `cargo bench`
exclude = ["crates/ash-fuzz", "crates/ash-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
authors = ["Ash Contributors"]
repository = "https://github.com/dikini/ash"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
winnow = "0.5"
pretty_assertions = "1.4"
insta = "1.34"
proptest = "1.4"
walkdir = "2.4"
colored = "2.1"
