[workspace]
members = [
    "crates/ash-core",
    "crates/ash-parser",
    "crates/ash-typeck",
    "crates/ash-interp",
    "crates/ash-provenance",
    "crates/ash-engine",
    "crates/ash-cli",
    "crates/ash-macros",
    "crates/ash-doc-tests",
    "crates/ash-repl",
]
# ash-fuzz excluded - requires nightly toolchain for fuzzing
# Excluded from main build:
# - ash-fuzz: requires nightly toolchain for libfuzzer
# - ash-bench: not part of main build, run separately via `cargo bench`
exclude = ["crates/ash-fuzz", "crates/ash-bench"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
authors = ["Ash Contributors"]
repository = "https://github.com/dikini/ash"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.12", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.42", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
winnow = "0.6"
pretty_assertions = "1.4"
insta = "1.42"
proptest = "1.6"
walkdir = "2.5"
colored = "3.0"

[workspace.lints.rust]
missing_docs = "warn"
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
nursery = "warn"
pedantic = { level = "warn", priority = -1 }
