[package]
name = "ash-bench"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT OR Apache-2.0"
authors = ["Ash Contributors"]
description = "Benchmarks for Ash workflow language"
publish = false

[dependencies]
ash-core = { path = "../ash-core" }
ash-parser = { path = "../ash-parser" }
ash-typeck = { path = "../ash-typeck" }
ash-interp = { path = "../ash-interp" }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "parser"
path = "benches/parser.rs"
harness = false

[[bench]]
name = "effect_lattice"
path = "benches/effect_lattice.rs"
harness = false

[[bench]]
name = "interpreter"
path = "benches/interpreter.rs"
harness = false

[[bench]]
name = "core"
path = "benches/core.rs"
harness = false

[[bench]]
name = "interp"
path = "benches/interp.rs"
harness = false
