[package]
name = "ash-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Command-line interface for Ash workflow language"

[[bin]]
name = "ash"
path = "src/main.rs"

[dependencies]
ash-engine = { path = "../ash-engine" }
ash-core = { path = "../ash-core" }
ash-repl = { path = "../ash-repl" }
ash-provenance = { path = "../ash-provenance" }
ash-parser = { path = "../ash-parser" }
ash-typeck = { path = "../ash-typeck" }
ash-interp = { path = "../ash-interp" }
winnow = { workspace = true }
clap = { version = "4.4", features = ["derive", "cargo"] }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
colored = "2.1"
walkdir = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
regex = "1.10"
async-trait = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.9"
