[package]
name = "ash-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core IR and semantics definitions for Ash"

[features]
default = []
smt = ["z3"]
proptest-helpers = ["dep:proptest"]

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
z3 = { version = "0.12", optional = true }
proptest = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
