[package]
name = "ash-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Core IR and semantics definitions for Ash"

[features]
proptest-helpers = ["dep:proptest"]

[dependencies]
serde.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
proptest = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true, features = ["yaml"] }
serde_json = { workspace = true }
