[package]
name = "ash-interp"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Interpreter for the Ash workflow language"

[dependencies]
ash-core = { path = "../ash-core" }
ash-parser = { path = "../ash-parser" }
ash-typeck = { path = "../ash-typeck" }
tokio = { workspace = true }
async-trait = { workspace = true }
thiserror.workspace = true
chrono = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = { workspace = true }
