[package]
name = "ash-lint"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Custom lints for Ash workflow language"

[[bin]]
name = "ash-lint"
path = "src/main.rs"

[dependencies]
ash-core = { path = "../ash-core" }
ash-parser = { path = "../ash-parser" }
anyhow = { workspace = true }
clap = { version = "4.4", features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
colored = "2.1"

[dev-dependencies]
pretty_assertions = { workspace = true }
