[package]
name = "ash-repl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Interactive REPL for the Ash workflow language"

[dependencies]
ash-engine = { path = "../ash-engine" }
ash-core = { path = "../ash-core" }
ash-parser = { path = "../ash-parser" }
ash-interp = { path = "../ash-interp" }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustyline = { version = "15.0", features = ["derive"] }
directories = "6.0"
colored = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"

[lints]
workspace = true
